tests/sumo/extended/simulation_routing/assignment/errors/testsuite.sumo
# trips as input, no edges, districts used
trip_taz_noedge_disconnected_parallel

# trips as input, districts used, no connection
trip_with_taz_disconnect

# trips as input, districts used, no connection, ignore route errors
disconnect_ignore
unknown_taz
empty_taz
